# multithreading

./: .gitignore  CMakeLists.txt  README.md  mateusz_multithreading.md  zadanie2.cpp  zadanie3.cpp
00_homework_kawapa/: Z2.cpp  Z3.cpp  Z4.cpp  Z5.cpp  Z5.xlsx  Z6.cpp  Z8.cpp
00_homework_kawapa/PROJECT1/: CMakeLists.txt
00_homework_kawapa/PROJECT1/src/: Book.cpp  Book.hpp  Calculate.cpp  Calculate.hpp  Philosopher.cpp  Philosopher.hpp  Print.cpp  Print.hpp  Reflection.cpp  Reflection.hpp  Wait.cpp  Wait.hpp  Write.cpp  Write.hpp  main.cpp
00_homework_kawapa/PROJECT1/tests/: BookTests.cpp  PhilosopherTests.cpp  ReflectionTests.cpp  WriteTests.cpp  test.txt
00_homework_kawapa/RayTracer/: CMakeLists.txt
00_homework_kawapa/RayTracer/src/: imager.h  main.cpp  scene.cpp
01_homework/: CMakeLists.txt  hw1_task2.cc  hw1_task3.cc  hw2_task4.cpp  hw2_task5.cpp  hw3_task8.cpp  hw4_task9a.cpp  hw4_task9b.cpp  pingpong.cpp
01_homework/inc/: Philosopher.hpp  Table.hpp
01_homework/src/: Philosopher.cpp  Table.cpp  main.cpp
01_threads/exercises/: 02_reference_passing.cpp  03_methods_passing.cpp  05_threads_in_collection.cpp  CMakeLists.txt
02_data_sharing/exercises/: CMakeLists.txt
02_threads/solutions/: 01_params_passing.cpp  02_reference_passing.cpp  03_methods_passing.cpp  04_scoped_thread.cpp  05_threads_in_collection.cpp  CMakeLists.txt
02a_threads_by_Mateusz/: pararel_accumulate.cc  zadanie1.cc
02b_threads_by_Marcin/: pararel_accumulate.cc  pararel_count_if.cc  zad2_result.txt  zad3_result.txt
07_future_promise/homework/: CMakeLists.txt  README.md  notification_sender.cxx
07_future_promise/homework/AsyncAccumulate/: exercises8.cpp
07_future_promise/homework/task1/solution/: main.cpp
07_future_promise/homework/task1/src/: main.cpp
07_future_promise/homework/task2/: CMakeLists.txt
07_future_promise/homework/task2/solution/: main.cpp
07_future_promise/homework/task2/src/: main.cpp
07_future_promise/homework/task3/solution/: main.cpp
07_future_promise/homework/task3/src/: main.cpp
4home/: CMakeLists.txt
4home/src/: Fork.cpp  Fork.hpp  Philosopher.cpp  Philosopher.hpp  Table.cpp  Table.hpp  main.cpp
5home/: main.cpp
6home/: main.cpp
8home/: main.cpp
9ahome/: CMakeLists.txt  main.cpp
Homework2/: CMakeLists.txt  solution.cpp
Homework3/: CMakeLists.txt  solution.cpp
Homework4/: CMakeLists.txt  philosophers.cpp
Homework6/: CMakeLists.txt  pingpong.cpp
PraceDomowe/: .gitignore  a.out  zad2_accumulate.cpp  zad3_count_if.cpp  zad4_dining_philosophers.cpp  zad5_false_sharing_alignof.cpp  zad5_false_sharing_updated.cpp  zad6_ping_pong.cpp
Zadania/: zad5_false_sharing.cpp
exercises/: CMakeLists.txt  exercises2.cpp  exercises3.cpp
exercises5and6/: 03a_ping_pong.cpp  false-sharing.cpp
homework/: 02_parallel_accumulate.cpp  false_sharing.cpp  pararel_accumulate_async.cpp  philosopher.cpp  ping_pong.cpp  zad4_result_20F.txt  zad4_result_5F.txt  zad5_result.txt  zad8_result.txt  zadanie2_pararel_accumulate.cpp  zadanie3_parallel_count_if.cpp  zadanie4_five_philosophers.cpp  zadanie5_false_sharing.cpp  zadanie6_ping_pong.cpp
homework/zad9_opencv/: CMakeLists.txt  line_match.cpp  line_match2.cpp  line_match2.cpp.bak  pattern_match.cpp  test_ocv.cpp
module1/: 00_intro.en.md  00_intro.pl.md  01_concurrency.en.md  01_concurrency.pl.md  02_std_thread.en.md  02_std_thread.pl.md  03_passing_arguments.en.md  03_passing_arguments.pl.md  04_join_or_detach.en.md  04_join_or_detach.pl.md  05_raii.en.md  05_raii.pl.md  06_copy_elision.en.md  07_dangling_reference.en.md  07_dangling_reference.pl.md  08_exceptions.en.md  08_exceptions.pl.md  09_auxiliary_functions.en.md  09_auxiliary_functions.pl.md  10_threads_in_collections.en.md  11_homework.en.md  11_homework.pl.md  README.md  index.en.html  index.pl.html
module2/: 00_intro.en.md  00_intro.pl.md  01_data_sharing.en.md  01_data_sharing.pl.md  02_races.en.md  02_races.pl.md  02_std_thread.en.md  02_std_thread.pl.md  02_threads.md  03_mutex.en.md  03_mutex.pl.md  03_passing_arguments.en.md  04_join_or_detach.en.md  04_locks.en.md  04_locks.pl.md  05_memory_model.en.md  05_memory_model.pl.md  05_raii.en.md  06_copy_elision.pl.md  06_good_practices.en.md  06_good_practices.pl.md  07_deadlock.en.md  07_deadlock.pl.md  07_mutex.pl.md  08_exceptions.pl.md  08_recap.en.md  08_recap.pl.md  10_threads_in_collections.en.md  10_threads_in_collections.md  10_threads_in_collections.pl.md  11_homework.en.md  11_homework.md  12_menadzery-blokad.pl.md  13_memory_model.pl.md  17_podsumowanie.pl.md  README.md  index.en.html  index.html  index.pl.html  mateusz_multithreading.md  (+1 more)
module2/Homework/: CMakeLists.txt  dining_table.cpp  dining_table.h  philosopher.cpp  philosopher.h
module2/exercises/: 02_threads_in_collection.cpp  03_shared_mutex.cpp  04_deadlock.cpp  05_synchronization.cpp  CMakeLists.txt
module3/: 00_intro.en.md  01_std-thread-low-level.en.md  01_std-thread-low-level.pl.md  01_thread-drawbacks.en.md  02_how-promise-future-works.en.md  02_how-promise-future-works.pl.md  02_promise-future.en.md  03_find-broken-piece-of-code.en.md  03_find-broken-piece-of-code.pl.md  04_more-about-promise-future.en.md  04_more-about-std-promise.en.md  04_more-about-std-promise.pl.md  05_exercises.en.md  05_package-this-function.en.md  05_package-this-function.pl.md  06_one-to-many.en.md  06_one-to-many.pl.md  07_async.en.md  07_homework-generalization-of-schedule-function.en.md  08_launch-policies.en.md  08_std-async.en.md  08_std-async.pl.md  09_example-launch-policies.en.md  09_example-launch-policies.pl.md  09_packaged_task.en.md  10_launch-policies.en.md  10_launch-policies.pl.md  10_recap.en.md  11_exercise1-no-launch-policies.en.md  11_exercise1-no-launch-policies.pl.md  12_no-policies-undefined-behaviour.pl.md  13_riddle.pl.md  14_std-packaged_task.en.md  14_std-packaged_task.pl.md  index.en.html  index.pl.html
module3/exercises/: 01_get_number_async.cpp  02_schedule.cpp  03_exceptions.cpp  04_async_never_called.cpp  CMakeLists.txt  post-work.cpp
module4/: 00_intro.en.md  00_intro.pl.md  01_busy_waiting.en.md  (+41 more)
(+201 files in other folders)
